--- a/virtio-win-drivers-installer/features.wxs
+++ b/virtio-win-drivers-installer/features.wxs
@@ -51,5 +51,9 @@
                 Description='Virtio GPU DOD driver'>
                 <ComponentGroupRef Id='CMPG_viogpudo_driver' />
         </Feature>
+        <Feature Id='FE_viomem_driver' Title='Viomem' Level='1'
+                Description='Virtio Memory driver'>
+                <ComponentGroupRef Id='CMPG_viomem_driver' />
+        </Feature>
     </Fragment>
 </Wix>
