add WS2025 to the project
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/Drivers/qemupciserial/qemupciserial.wxs
+++ b/virtio-win-drivers-installer/Drivers/qemupciserial/qemupciserial.wxs
@@ -10,6 +10,7 @@
             <ComponentGroupRef Id='CMPG_WinServer2016_$(var.driverName)' />
             <ComponentGroupRef Id='CMPG_WinServer2019_$(var.driverName)' />
             <ComponentGroupRef Id='CMPG_WinServer2022_$(var.driverName)' />
+            <!--ComponentGroupRef Id='CMPG_WinServer2025_$(var.driverName)' /-->
             <ComponentGroupRef Id='CMPG_Win10x64_$(var.driverName)' />
             <ComponentGroupRef Id='CMPG_Win11x64_$(var.driverName)' />
         <?else ?>
