replace difx extension with our own
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/Drivers/pvpanic/pvpanic.wxs
+++ b/virtio-win-drivers-installer/Drivers/pvpanic/pvpanic.wxs
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <Wix xmlns='http://schemas.microsoft.com/wix/2006/wi'
-     xmlns:difx='http://schemas.microsoft.com/wix/DifxAppExtension'>
+     xmlns:dins='http://www.redhat.com/DrvInstExt'>
 <?include ../../constants.wxi ?>
 <?include ./pvpanic.wxi ?>
 
