bring the ip config save/remove custom actions back
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/properties.wxs
+++ b/virtio-win-drivers-installer/properties.wxs
@@ -77,9 +77,9 @@
     <!-- This Properties are for back up and update static IP logic -->
     <Fragment>
 <?if $(sys.BUILDARCH) = "x64" ?>
-        <Binary Id="ConfManagementDll" SourceFile="../Libraries/x64/VioCfg.dll" />
+        <Binary Id="ConfManagementDll" SourceFile="../Libraries/x64/DrvInstCA.dll" />
 <?else ?>
-        <Binary Id="ConfManagementDll" SourceFile="../Libraries/x86/VioCfg.dll" />
+        <Binary Id="ConfManagementDll" SourceFile="../Libraries/x86/DrvInstCA.dll" />
 <?endif ?>
 	<Property Id="IPCONFFILENAME" Value="vionet.cfg" />
         <Property Id="VIOCONFFILENAME" Value="viocfg.cfg" />
