RHEL-64986 remove x86 virtiomem driver https://issues.redhat.com/browse/RHEL-64986
Signed-off-by: Vadim Rozenfeld <vrozenfe@redhat.com>

--- a/virtio-win-drivers-installer/directories.wxs
+++ b/virtio-win-drivers-installer/directories.wxs
@@ -18,7 +18,9 @@
                     <Directory Id="VIOSTOR" Name="Viostor"/>
                     <Directory Id="VIOFS" Name="VioFS"/>
                     <Directory Id="VIOGPUDO" Name="Viogpudo"/>
+<?if $(sys.BUILDARCH) = "x64" ?>
                     <Directory Id="VIOMEM" Name="Viomem"/>
+<?endif ?>
                 </Directory>
             </Directory>
         </Directory>
